--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-monorepo",
   "version": "1.0.0",
-  "description": "my-monorepo",
+  "description": "my-monorepo-workflow",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
